# RoboHousekeeper-Agent

./: .gitignore  README.md  pyproject.toml
benchmark/: README.md
docs/: RESEARCH.md
scripts/: init_github.sh  run_demo.py
src/robohousekeeper_agent/: __init__.py  types.py
src/robohousekeeper_agent/brain/: __init__.py  orchestrator.py  planner.py  self_eval.py
src/robohousekeeper_agent/executor/: __init__.py  mock.py
src/robohousekeeper_agent/memory/: __init__.py  manager.py
src/robohousekeeper_agent/perception/: __init__.py  mock.py
src/robohousekeeper_agent/skills/: __init__.py  loader.py
tests/: test_smoke.py
